class Movie {
    constructor(id, title, userId, listId) {
      this.id = id;
      this.title = title;
      this.userId = userId;
      this.listId = listId;
    }
  }
  
  export default Movie;
  